[metadata]
name = rasa-converter
version = 0.0.1
author = Nick Sorros
author_email = nsorros@gmail.com
description = Converts Rasa data to other formats
long_description = file: README.md
url = https://www.github.com/nsorros/rasa-converter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    typer
    pyyaml
python_requires = >= 3.6

[options.extras_require]
spacy = 
    spacy
sklearn =
    sklearn
test = 
    pytest
    tox

[options.entry_points]
console_scripts =
    rasa-convert = rasa_converter.convert:app
    sklearn = rasa_converter.train_sklearn:app
    split-data = rasa_converter.split_data:app
